[project]
name = "pg-explain"
version = "0.1.0"
description = "Query Plan Visualiser — runs EXPLAIN ANALYZE and surfaces insights"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

# Tell Python where the package source lives.
# Without this, `import pg_explain` would fail because uv init puts
# source under src/ by default and Python's import system doesn't look
# there unless we configure it.
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# asyncio_mode = "auto" tells pytest-asyncio to treat every async test
# function as an asyncio test automatically — no need to decorate each
# test with @pytest.mark.asyncio individually.
asyncio_mode = "auto"
